[package]
name = "nfsserve"
version = "0.11.0"
edition = "2021"
authors = ["Rajat Arya <rajat@huggingface.co>", "Assaf Vayner <assaf@huggingface.co>"]
description = "A Rust NFS Server implementation"
homepage = "https://github.com/huggingface/nfsserve"
repository = "https://github.com/huggingface/nfsserve"
readme = "README.md"
keywords = ["nfs"]
license = "BSD-3-Clause"
categories = ["network-programming", "filesystem"]
publish = true
include = ["src/**/*", "src/*", "Cargo.toml", "LICENSE", "README.md"]


[lib]
doctest = false

[dependencies]
byteorder = "1.4"
num-traits = "0.2"
num-derive = "0.4"
tokio = { version = "1", features = ["net", "io-util", "sync", "fs", "rt", "macros"], default-features = false }
tracing = "0.1.31"
anyhow = "1"
async-trait = "0.1.9"
filetime = "0.2"

# demo
tracing-subscriber = { version = "0.3", features = ["tracing-log"], optional = true }
intaglio = { version = "1.6", optional = true }

[features]
strict = []
demo = ["tracing-subscriber", "tokio/rt-multi-thread", "intaglio"]


[[example]]
name = "demo"
required-features = ["demo"]
path = "examples/demo.rs"

[[example]]
name = "mirrorfs"
required-features = ["demo"]
path = "examples/mirrorfs.rs"

[[example]]
name = "mirrorfs-windows"
required-features = ["demo"]
path = "examples/mirrorfs-windows.rs"
